--- a/Did I/res/values/strings.xml
+++ b/Did I/res/values/strings.xml
@@ -1,11 +1,15 @@
 <resources>
 
     <string name="app_name">Did I?</string>
-    <string name="title_section3">Section 3</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section1">Section 1</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="title_habits">Habits</string>
+    <string name="title_progress">Progress</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">Did I?</string>
+    
+    <!-- Habits screen -->
+    
+    <string name="did_i">Did I</string>
+    <string name="add_a_habit">add a habit</string>
+    <string name="question_mark">\?</string>
 
 </resources>
