--- a/Did I/res/values/strings.xml
+++ b/Did I/res/values/strings.xml
@@ -19,5 +19,7 @@
     <string name="edit_introduction">Establish new habits by asking yourself a simple question every day:</string>
     <string name="add_qestions">Add your questions.</string>
     <string name="enter_habit">enter your habit</string>
+    <string name="menu_delete">Delete</string>
+    <string name="selected_items">Selected items</string>
 
 </resources>
