--- a/Did I/res/values/strings.xml
+++ b/Did I/res/values/strings.xml
@@ -6,13 +6,14 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">Did I?</string>
     
-    <!-- Habits screen -->
+    <!-- Habits and progress screen -->
     
     <string name="did_i">Did I</string>
     <string name="add_a_habit">add a habit</string>
     <string name="question_mark">\?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="no_habits">You haven\'t entered any habits yet!</string>
     
     <!-- Edit screen -->
     <string name="edit_habits">Edit habits</string>
@@ -21,5 +22,10 @@
     <string name="enter_habit">enter your habit</string>
     <string name="menu_delete">Delete</string>
     <string name="selected_items">Selected items</string>
+    
+    <!-- Content description -->
+    
+    <string name="indicator_description">Indicator which represents a habit question, changes color based on answer of question (green for yes, red for no, grey for unanswered)</string>
+    <string name="indicator_progress_description">Indicator which represents a habit question</string>
 
 </resources>
