Minor layout fixes.

--- a/Did I/res/values/strings.xml
+++ b/Did I/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="daily_report">Daily report at</string>
-    <string name="edit_no_habits">Add a habit by pressing the plus icon in the upper right corner.</string>
+    <string name="edit_no_habits">Add a habit by pressing the + icon in the upper right corner.</string>
 
     <!-- Content description -->
 
